--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "description": "NodeJS Feature Flag Implementation",
   "main": "index.js",
-  "dependencies": {
-    "chai": "^4.3.4"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "chai": "^4.3.4",
     "eslint": "^7.27.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
@@ -19,7 +18,7 @@
     "lint": "node node_modules/.bin/eslint index.js test/"
   },
   "repository": {
-    "type": "git"
+    "type": "git",
     "url": "git+https://github.com/cgianelle/jolly_roger.git"
   },
   "keywords": [
